Build a Fraction: Shapes: Fixed: When the user presses a "-" button to remove a container from a group, any pieces in the container should go back to the toolbox
Build a Fraction: Shapes: When a container is added to a container node, animate it to the left if it overlaps the scoring boxes.
# 1.00.24 (66784) Aug 9, 2012
Build a Fraction: Shapes: Decreased spacing between pies in the toolbox
# 1.00.23 (66782) Aug 9, 2012
Intro: Improved beaker offsets when dragging out of play area containers (again)
Build a Fraction: Shapes: Randomly use pies or bars instead of preferring one for large denominators
Build a Fraction: Shapes: Removed extra 1/2 pieces from level 4 when building halves
Build a Fraction: Shapes: Made internal divisions (dotted lines) go back to 1 when going into toolbox
Build a Fraction: Shapes: For levels 8-10, made number of containers go back to 1 when going into toolbox
Build a Fraction: Shapes: Made it so the dotted lines don't get in the way of mouse events
# 1.00.22 (66770) Aug 9, 2012
Intro: Improved beaker offsets when dragging out of play area containers
# 1.00.21 (66768) Aug 9, 2012
Intro: Improved performance, particularly for equality lab and beakers
# 1.00.20 (66762) Aug 9, 2012
Intro: Fixed location of fluid beakers when dragging out of the play area containers
Intro: Fixed grab region for draggable fluid cups when in the play area containers
Intro: Fixed z-ordering for cake slices so there is no z-order swap when dragging one cake vertically past another
Build a Fraction: Don't show "Next" button if it was the last level
Build a Fraction: Fixed: Reset doesn't work for expanded containers
Build a Fraction: Made it so that containers max out at 2 instead of 3
# 1.00.19 (66728) Aug 8, 2012
Intro: Fixed flickering z-ordering for cake slices
Intro: Fixed: Extra flying pieces created when reducing the max
# 1.00.18 (66679) Aug 7, 2012
Addressed review issues by adding documentation
Use solutions with a smaller number of cards